# StockSavvy

./: .gitattributes  .gitignore  EXECUTIVE_SUMMARY.md  FEATURE_COMPARISON.md  GIT_LINE_ENDINGS_README.md  GIT_UTILITIES_README.md  HOW_TO_UPDATE_CODE.md  PRESENTATION_GUIDE.md  README.md  clone_repo.py  clone_repo_README.md  demo_setup.sh  pyproject.toml  render.yaml  requirements.txt  start_stocksavvy.bat  start_stocksavvy_advanced.bat  start_stocksavvy_advanced.bat - Shortcut.lnk  update_repo.py  update_repo_README.md
.github/workflows/: trigger-forecast.yml
backend/: .env  bc_integration_migration.sql  carton_pricing_migration.sql  create_batch_tables.py  create_user.py  requirements.txt
backend/api/: apps.py  authentication.py  batch_models.py  batch_serializers.py  batch_views.py  consumers.py  models.py  permissions.py  routing.py  scheduler.py  serializers.py  shop_views.py  tasks.py  urls.py  utils.py  views.py  views_temp.py
backend/api/migrations/: 0001_initial.py  0002_add_batch_tables.py  0002_add_product_forecasts.py  0003_alter_productbatch_options_and_more.py  0004_alter_activity_user.py  0005_create_sku_sequence.py  0006_alter_sku_sequence_add_pattern.py  0007_create_product_forecasts.py  0008_merge_20250515_1616.py  0009_alter_productforecast_options_and_more.py  0010_backfill_initial_batches.py  0011_add_multishop_tables.py
backend/backend/: asgi.py  settings.py  urls.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1767777553877-1e4eda49105bb.mjs
frontend/client/: index.html
(+65 files in other folders)
