[tool.poetry]
name = "stocksavvy"
version = "0.1.0"
description = "Stock management application"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
psycopg2-binary = "*"
python-dotenv = "^1.1.0"
dj-database-url = "^2.3.0"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"
bcrypt = "^4.3.0"
jwt = "^1.3.1"
pytz = "^2025.2"
django-q = { git = "https://github.com/Koed00/django-q.git", branch = "master" }
django-redis = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"